# study_opengl

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
back/: Makefile  README.md
include/glad/: glad.h
lib/glad/: glad.c
lib/x64/: glfw3.lib
resources/shader/: fragment.glsl  vertex.glsl
screenshot/: README.md
src/: camera.cpp  camera.h  circle.cpp  circle.h  cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  graphic.cpp  graphic.h  main.cc  main.cpp  rect.cpp  rect.h  shader.cpp  shader.h  sphere.cpp  sphere.h  sprite.cpp  sprite.h  tex.cc  tex.h  ui.cpp  ui.h
